fixing spacing

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,6 @@
   justify-content: space-between;
   font-size: calc(13px + 2vmin);
   color: #fff;
-  padding: 0 2vw;
+  padding: 0 2.5vw;
 }
 
